# zero-turn-mower-rover

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  all_tests_full.txt  pyproject.toml  pytest_full_output.txt  pytest_output.txt  pytest_report.txt  test_service_full.txt  test_service_results.txt  test_vslam_results.txt  tests_output.txt  tests_output_v2.txt
.github/: copilot-instructions.md
.github/agents/: pch-coder.md  pch-helper.md  pch-plan-reviewer.md  pch-planner.md  pch-researcher.md  pch-visionary.md
.github/workflows/: ci.yml
config/taranis/: README.md
config/taranis/MODELS/: model00.yml  model01.yml
config/taranis/RADIO/: radio.yml
contrib/rtabmap_slam_node/: CMakeLists.txt  build.sh
contrib/rtabmap_slam_node/include/: vslam_pose_msg.h
contrib/rtabmap_slam_node/src/: rtabmap_slam_node.cpp
docs/config/: mower.param
docs/field/: 001-sensor-location-measurements.md
docs/plans/: 001-param-apply-snapshot-restore.md  002-jetson-bringup-automation.md  003-ci-lint-typecheck-fixes.md  004-jetson-physical-bringup-field-hardening.md  005-automated-jetson-bringup-ssh.md  006-jetpack6-reflash-and-rebringup.md  007-oakd-usb-slam-readiness.md  008-vslam-ardupilot-integration.md  009-jetson-deploy-integration-gaps.md  010-full-jetson-deployment-automation.md  011-ci-lint-typecheck-fixes-round2.md  012-ci-pipeline-full-green.md  013-multi-zone-lawn-management.md  014-oakd-bootstrap-detection-fix.md
docs/procedures/: 001-usb-enumeration.md  002-extrinsic-calibration.md  003-vslam-trajectory-validation.md  004-lua-source-switching.md  005-health-monitoring-e2e.md
docs/research/: 001-mvp-bringup-rtk-mowing.md  002-jetson-agx-orin-bringup.md  003-ci-lint-typecheck-failures.md  004-operations-iteration-quality.md  005-jetson-agx-orin-jetpack6-reflash.md  006-oakd-pro-usb-slam-readiness.md  007-vslam-ardupilot-rtk-integration.md  008-jetson-mavlink-vision-integration-deploy.md  009-oakd-pro-full-feature-config.md  010-qwen-llm-jetson-feasibility.md  011-full-jetson-deployment-automation.md  012-ci-lint-typecheck-failures-round2.md  013-ci-pipeline-full-green.md  014-multi-zone-lawn-management.md  015-taranis-x9d-sdcard-configuration.md  016-oakd-bootstrap-detection-failure.md  017-perception-people-pet-avoidance.md
docs/vision/: 001-zero-turn-mower-rover.md
scripts/: 90-pixhawk-usb.rules  jetson-harden.sh
src/mower_rover/: __init__.py
src/mower_rover/cli/: backup.py  bringup.py  detect.py  jetson.py  jetson_remote.py  laptop.py  params.py  setup.py  vslam_laptop.py  zone_laptop.py
src/mower_rover/config/: __init__.py  jetson.py  laptop.py  vslam.py
src/mower_rover/health/: __init__.py  disk.py  power.py  thermal.py
src/mower_rover/logging_setup/: setup.py
src/mower_rover/mavlink/: connection.py  mission.py
src/mower_rover/params/: __init__.py  baseline.py  diff.py  io.py  mav.py
tests/: conftest.py  test_bringup.py  test_cli_jetson_smoke.py  test_cli_smoke.py  test_config.py  test_db_integrity.py  test_detect_sitl.py  test_health.py  test_logging.py  test_oakd_state_machine.py  test_params.py  test_params_sitl.py  test_probe.py  test_probe_service.py  test_probe_vslam.py  test_safety.py  test_service.py  test_setup.py  test_transport_ssh.py  test_vslam_config.py  test_vslam_field.py  test_vslam_frames.py  test_vslam_health.py  test_vslam_ipc.py  test_vslam_lua_deploy.py  test_zone_cli.py  test_zone_config.py  test_zone_geojson.py  test_zone_mission.py  test_zone_planner.py  test_zone_preflight.py  test_zone_sitl.py
zones/: ne.yaml  nw.yaml  south.yaml
(+40 files in other folders)
